# tennis-bot-tipster

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
configs/: data_sources.yaml  default.yaml
data/example/: fixtures.csv  matches.csv
data/fixtures/: latest.csv  latest_for_tips.csv
data/news/: news_flags.csv
scripts/: fetch_fixtures_sofascore.py  filter_tips.backup.py  filter_tips.py  generate_overunders.py  prep_fixtures_for_tips.py
src/tennistips/: __init__.py  cli.align_rows.bak  cli.backup.numericfix.bak  cli.backup.py  cli.before_config_fix.bak  cli.introspect.bak  cli.py  cli.with_params.bak  config.py  data.py  elo.py  features.py  model.py  news_guard.py  tips.py
src/tennistips/features/: __init__.py  fatigue.py  utils.py
src/tennistips/overunder/: dataset.py  predict.py  train.py
src/tennistips/pipeline/: downloader.py  merge.py
tests/: test_elo.py
